# ai-goal-coach

./: .gitignore  Dockerfile.api  Dockerfile.ui  README.md  app.py  config.py  database.py  docker-compose.yml  main.py  prompt_plan.md  pyproject.toml  schemas.py  telemetry.py  todo.md
api/: __init__.py  main.py
core/: __init__.py  auth.py  config.py  database.py  schemas.py  telemetry.py
docs/: demo_scenarios.md  prompt_plan.md  spec.md  todo.md
docs/plans/: 2025-02-20-project-structure-design.md  2025-02-20-project-structure-restructure.md  2026-02-20-saved-goals-list-view-design.md  2026-02-20-saved-goals-list-view.md  2026-02-20-smart-goal-prompt-design.md
goal_coach/: __init__.py  agent.py
tests/: conftest.py  test_agent.py  test_auth.py  test_database.py  test_evals.py  test_main.py  test_ui_helpers.py
ui/: __init__.py  app.py
